@@ -11,7 +11,11 @@ use Apache2::Log qw();              # $log->*()
 use APR::Table qw();                # dir_config->get() and headers_out->unset()
 use Apache2::Const -compile => qw(OK DECLINED);
 use Time::HiRes qw(gettimeofday tv_interval);
-use JavaScript::Minifier qw(minify);
+
+###############################################################################
+# Load up the JS minifier modules.
+use JavaScript::Minifier;
+eval { require JavaScript::Minifier::XS; };
 
 ###############################################################################
 # Version number.
@@ -52,6 +56,35 @@ sub handler {
         return Apache2::Const::DECLINED;
     }
 
+    # figure out which minifier module/function we're supposed to be using;
+    # either an explicit minifier function/package, or our list of acceptable
+    # minifiers
+    my $minifier;
+    my @possible = $r->dir_config->get('JsMinifier') || (
+        'JavaScript::Minifier::XS',
+        'JavaScript::Minifier',
+        );
+    foreach my $maybe (@possible) {
+        no strict 'refs';
+        # explicit function name
+        if (defined &{"$maybe"}) {
+            $minifier = sub { $maybe->(shift) };
+            last;
+        }
+        # package name; look for "minify()" function
+        if (defined &{"${maybe}::minify"}) {
+            my $func = \&{"${maybe}::minify"};
+            $minifier = ($maybe eq 'JavaScript::Minifier')
+                            ? sub { $func->(input=>shift) }
+                            : sub { $func->(shift) };
+            last;
+        }
+    }
+    unless ($minifier) {
+        $log->info( "no JavaScript minifier available; declining" );
+        return Apache2::Const::DECLINED;
+    }
+
     # gather up entire document
     my $ctx = $f->ctx;
     while ($f->read(my $buffer, 4096)) {
@@ -67,7 +100,7 @@ sub handler {
     # if we've got JS to minify, minify it
     if ($ctx) {
         my $t_st = [gettimeofday()];
-        my $min  = eval { minify( input=>$ctx ) };
+        my $min  = eval { $minifier->($ctx) };
         if ($@) {
             # minification failed; log error and send original JS
             $log->error( "error minifying: $@" );
@@ -100,12 +133,18 @@ Apache2::Filter::Minifier::JavaScript - JS minifying output filter
 
       # if you need to supplement MIME-Type list
       PerlSetVar                JsMimeType  text/json
+
+      # if you want to explicitly specify the minifier to use
+      #PerlSetVar               JsMinifier  JavaScript::Minifier::XS
+      #PerlSetVar               JsMinifier  JavaScript::Minifier
+      #PerlSetVar               JsMinifier  MY::Minifier::function
   </LocationMatch>
 
 =head1 DESCRIPTION
 
 C<Apache2::Filter::Minifier::JavaScript> is a Mod_perl2 output filter which
-minifies JavaScript using C<JavaScript::Minifier>.
+minifies JavaScript using C<JavaScript::Minifier> or
+C<JavaScript::Minifier::XS>.
 
 Only JavaScript documents are minified, all others are passed through
 unaltered.  C<Apache2::Filter::Minifier::JavaScript> comes with a list of
@@ -113,6 +152,15 @@ several known acceptable MIME-Types for JavaScript documents, but you can
 supplement that list yourself by setting the C<JsMimeType> PerlVar
 appropriately (use C<PerlSetVar> for a single new MIME-Type, or C<PerlAddVar>
 when you want to add multiple MIME-Types).
+
+Given a choice, using C<JavaScript::Minifier::XS> is preferred over
+C<JavaScript::Minifier>, but we'll use whichever one you've got available.  If
+you want to explicitly specify which minifier you want to use, set the
+C<JsMinifier> PerlVar to the name of the package/function that implements the
+minifier.  Minification functions are expected to accept a single parameter
+(the JavaScript to be minified) and to return the minified JavaScript on
+completion.  If you specify a package name, we look for a C<minify()> function
+in that package.
 
 =head2 Caching
 
@@ -167,6 +215,7 @@ license as Perl itself.
 =head1 SEE ALSO
 
 L<JavaScript::Minifier>,
+L<JavaScript::Minifier::XS>,
 L<Apache2::Filter::Minifier::CSS>,
 L<Apache::Clean>.
 
